force-app/main/default/objects/OA_Unsubscribe_Request__e/OA_Unsubscribe_Request__e.object-meta.xml
<CustomObject>
    <label>OA Unsubscribe Request</label>
    <pluralLabel>OA Unsubscribe Requests</pluralLabel>
</CustomObject>