force-app/main/default/objects/OA_Unsubscribe_Request__e/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>