force-app/main/default/objects/OA_Unsubscribe_Request__e/fields/Request_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Request_Metadata__c</fullName>
    <label>Request Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>