force-app/main/default/objects/OA_Unsubscribe_Request__e/fields/Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Token_Hash__c</fullName>
    <label>Token Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>